--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ html{
 .container{
 	float: none;
   position: absolute;
+  bottom: auto;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
